sass/web.site/modules/_nav.sass
.nav
	display: none
	flex-flow: column nowrap
	font-size: em(16px)
	letter-spacing: $letter-spacing-m
	line-height: remify(50px)

	&:target,
	&[aria-hidden="false"]
		display: block // IE no-flexbox fallback
		display: flex

	a
		color: inherit
		display: block
		+on-interaction
			color: $zon-dark-grey

	ul
		list-style: none
		margin: 0
		padding: 0

	li
		float: left
		margin: 0
		padding: 0
		position: relative

	// this is legacy protection and will be obsolete as soon as navigation-classifieds.xml was updated
	&__classifieds-list
		> li:nth-child(n+6)
			display: none

	&__ressorts-item--featured
		a
			background-color: $zon-dark-grey
			border-radius: 3px
			color: #fff
			display: inline-block
			line-height: 2
			padding: remify(0 8px)
			transition: background-color .15s linear
			+on-interaction
				background-color: $zon-grey
				color: #fff

	// hide advertorial links in 1st level navigation, enable for mobile view only
	&__ressorts-item--has-label,
	// hide more ressorts link, enable for script enabled desktop view only
	&__ressorts-item--more
		display: none

	// basic advertorial styles
	&__dropdown-item--has-label,
	&__ressorts-item--has-label
		&:before
			color: $zon-mid-grey
			content: "Anzeige" // fallback incapable browsers
			content: attr(data-label)
			display: block
			font-size: remify(9px)
			letter-spacing: .15em
			line-height: 1
			margin: remify(10px 0 0 10px)
			text-transform: uppercase
		// & + &:before
		// 	content: none

	// LOGIN
	&__login
		// min-width: remify(80px)
	&__login-link
		text-align: right
	&__login-icon
		height: remify(18px)
		width: remify(18px)
		vertical-align: remify(-3px)
	&__user-picture
		background-color: #eee
		background-position: center
		background-repeat: no-repeat
		background-size: contain
		border-radius: 50%
		display: block
		float: left
		height: remify(40px)
		margin: remify(10px 8px 10px 0)
		width: remify(40px)
		&--default
			display: none
	&__user-avatar
		color: #ababab
		height: 100%
		width: 100%
	&__user-name
		font-weight: bold

	&__tags
		a
			display: inline-block

	&__tag
		@extend %tags

	+respond-max($break-tablet-min)
		// item order
		&__login
			order: 1
		&__metadata
			order: 2
		&__ressorts
			order: 3
		&__services
			order: 4
		&__classifieds
			order: 5
		&__search
			order: 6

		&__login,
		&__metadata,
		&__ressorts,
		&__classifieds,
		&__search
			border-bottom: 1px solid $color-border
			padding: 0 $page-padding--small

		&__metadata
			padding: remify(12px 5px 10px $page-padding--small)

		&__ressorts,
		&__classifieds
			line-height: 2.625
			padding-bottom: remify(6px)
			padding-right: 0
			padding-top: remify(6px)
			li
				padding-right: $page-padding--small
				width: 33.33%
			a
				overflow: hidden
				text-overflow: ellipsis
				white-space: nowrap

		// hide "more" link and show children
		&__classifieds-list
			.nav__classifieds-item--has-dropdown
				padding-right: 0
				width: 100%
			a[role="button"]
				display: none

		&__ressorts
			.nav__dropdown-list
				display: none
		&__ressorts-item--featured
			a
				vertical-align: remify(-10px)
		&__ressorts-item--has-label
			clear: left
			display: list-item
			line-height: 2
			& + &
				clear: none
			&:before
				content: "Anzeige" // override any plural form used in desktop view
				margin: 0
			// specificity hack
			@at-root li#{&}
				margin: remify(16px 0 0)

		&__services
			border-bottom: 1px solid $color-border
			li
				width: 33.33%
				text-align: center
				&:not(:first-child)
					border-left: 1px solid $color-border
				&:last-child
					display: none

		&__login
			line-height: remify(60px)
		&__login-title
			float: left
			max-width: 66%
			overflow: hidden
			text-overflow: ellipsis
			white-space: nowrap
		&__login-list
			float: right
			font-size: remify(14px)
			letter-spacing: .08em
			li:not(:last-child)
				display: none

		&__metadata
			line-height: 1.5

		&__label
			display: block
			margin-bottom: remify(10px)

		&__tag
			border-radius: 4px
			font-size: remify(14px)
			margin-bottom: remify(10px)
			padding: remify(8px 14px)

		&__date
			display: none

	+respond-max($break-phablet-min)
		&__ressorts,
		&__classifieds
			li
				padding-right: $page-padding--small
				width: 50%

	+respond-min($break-tablet-min)
		display: block // IE no-flexbox fallback
		// width: 100% // needed for IE no-flexbox fallback
		display: flex
		flex-flow: row wrap
		// justify-content: flex-end // carefull, this seems to affect ressorts overflow direction

		a
			white-space: nowrap
			&[aria-controls]:after
				+drop_icon()
			&[aria-expanded="true"]:after
				+drop_icon($open: true, $cross: false)

		&__classifieds,
		&__services,
		&__login
			font-size: remify(10px)
			letter-spacing: 1px
			text-transform: uppercase
			line-height: remify(32px)

		&__classifieds-list,
		&__services-list
			& > li
				margin-right: remify(12px)
				&:last-child
					margin-right: remify(20px)

		// align left @see https://www.w3.org/TR/2012/CR-css3-flexbox-20120918/#auto-margins
		&__classifieds
			margin-right: auto
		&__search,
		&__ressorts
			flex: 1 1 100%

		&__search
			height: remify(86px)

		&__ressorts
			border-bottom: 1px solid $color-border
			font-size: remify(14px)
			line-height: remify(36px)
			a
				&:hover,
				&:focus,
				&.nav__ressorts-link--current
					box-shadow: inset 0 -3px 0 0 $color-border
			a[aria-controls]
				&:hover,
				&:focus
					box-shadow: none

		&__ressorts-list
			> li
				padding-right: remify(11px)

		.js &__ressorts
			overflow: hidden
			&--fitted
				overflow: visible
		.js &__ressorts-list
			display: flex
			> li
				flex: 0 0 auto
		.js &__ressorts-item--more
			display: list-item
		.js &__ressorts-item--featured
			margin-left: auto // align right @see https://www.w3.org/TR/2012/CR-css3-flexbox-20120918/#auto-margins

		&__dropdown-item--has-label
			background-color: #FAFAF3
			border-top: 1px solid $color-border
			& + &
				border-top: none
				&:before
					content: none

		&__ressorts-link--current
			font-weight: bold

		&__ressorts-item--featured
			a
				+on-interaction
					box-shadow: none

		// dropdown menues
		&__dropdown-list,
		&__login-list
			background-color: #fff
			border: 1px solid $color-border
			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05)
			display: none
			left: remify(-11px)
			min-width: remify(154px)
			position: absolute
			z-index: 3 // fix visible arrow and lead-teaser headline
			li:hover &,
			&[aria-hidden="false"]
				display: block
			a
				padding: remify(0 10px)
				white-space: nowrap
				&:hover,
				&:focus,
				&.nav__dropdown-link--current
					background-color: $gainsboro
					box-shadow: none
			li
				display: block
				float: none

		& li:hover a[aria-controls]:after,
		&__login:hover a[aria-controls]:after
			+drop_icon($open: true, $cross: false)
			box-shadow: none
		&__login:hover &__login-list
			display: block

		// LOGIN
		&__login
			position: relative
		&__login-register,
		&__login-icon,
		&__user-picture
			display: none
		&__user-name
			text-align: right

		li.nav__ressorts-item--featured
			float: right
			font-size: remify(12px)
			padding-right: 0

		// Tags and date
		&__metadata
			+clearfix
			color: $zon-dark-grey
			font-size: em(11px)
			letter-spacing: $letter-spacing-l
			line-height: 1rem
			margin: remify(12px 0 7px)
			text-transform: uppercase
			width: 100%

		&__tags
			display: inline-block

		&__label
			font-weight: bold
			padding-right: 1em

		&__date
			float: right
			padding-top: 5px

	+respond-min-max($break-tablet-min, $break-desktop-min)
		&__login-list
			left: auto
			right: remify(-10px)


//*************
// NO FLEXBOX *
//*************

.no-flexbox
	.nav
		&__classifieds,
		&__services,
		&__login,
		&__search,
		&__ressorts
			+pie-clearfix

+respond-min($break-tablet-min)
	// no JS variant (without JS, modernizr does not add the "no-flexbox" class)
	// These styles must not harm the default styles!
	// Note that float, clear and vertical-align have no effect on a flex item.
	.no-js
		.nav
			&__classifieds,
			&__services
				float: left
			&__login
				float: right

			&__search,
			&__ressorts,
			&__metadata
				clear: both
				width: 100%

			&__ressorts
				+pie-clearfix

	.no-flexbox
		.nav
			&__classifieds,
			&__services
				float: left
			&__login
				float: right

			&__search,
			&__ressorts,
			&__metadata
				clear: both
				display: block // needed for IE8
				width: 100%

			&__ressorts-list
				display: table
				min-width: 100%
				white-space: nowrap
				> li
					display: table-cell
					float: none

			li.nav__ressorts-item--featured
				text-align: right
				width: 50%

